Criando as class para as divs.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <main>
-        <div>
-            <div></div>
-            <div></div>
+        <div class="conteudo">
+            <div class="informacoes"></div>
+            <div class="botoes-corrossel"></div>
         </div>
     </main>
 </body>
