Criado os botões do carrossel para passar as imagens.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,16 @@
                     Conquistador e o Meraxes de sua irmã Rhaenys.
                 </p>
             </div>
-            <div class="botoes-corrossel"></div>
+
+            <div class="botoes-corrossel">
+                <button class="botao selecionado"></button>
+                <button class="botao"></button>
+                <button class="botao"></button>
+                <button class="botao"></button>
+                <button class="botao"></button>
+                <button class="botao"></button>
+                <button class="botao"></button>
+            </div>
         </div>
     </main>
 </body>
