--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 
 <body>
     <main>
+        <div class="carrossel">
+            <img class="imagem ativa" src="/src/imagem/balerion.png" alt="Dragão Balerion">
+            <img class="imagem" src="/src/imagem/syrax.png" alt="Dragão Syrax">
+            <img class="imagem" src="/src/imagem/arrax.png" alt="Dragão Arrax">
+            <img class="imagem" src="/src/imagem/caraxes.png" alt="Dragão caraxes">
+            <img class="imagem" src="/src/imagem/seasmoke.png" alt="Dragão Seasmoke">
+            <img class="imagem" src="/src/imagem/vermax.png" alt="Dragão Vermax">
+            <img class="imagem" src="/src/imagem/vhagar.png" alt="Dragão Vhagar">
+
+        </div>
         <div class="conteudo">
             <div class="informacoes ativa">
                 <h1>Balerion</h1>
